--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
         {
           "matchPattern": "Bookmark"
         }
-      ]
+      ],
+      "transform-decorators-legacy",
+      ["transform-define", "./env-config.js"]
     ]
   },
   "dependencies": {
     "babel-plugin-inline-json": "^1.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-define": "^1.3.0",
     "body-parser": "^1.17.2",
     "cookie-session": "^1.3.1",
     "ethereumjs-testrpc": "^4.1.3",
@@ -32,9 +36,13 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
+    "mobx": "^3.3.0",
+    "mobx-react": "^4.3.2",
     "next": "^3.0.3",
+    "nprogress": "^0.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "thepiratebay": "^1.4.5",
     "truffle": "^3.4.9",
     "truffle-contract": "^3.0.0",
     "web3": "^1.0.0-beta.20"
