--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server/",
+    "test": "truffle test",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server/",
     "heroku-postbuild": "next build"
   },
   "engines": {
@@ -20,7 +21,10 @@
         }
       ],
       "transform-decorators-legacy",
-      ["transform-define", "./env-config.js"]
+      [
+        "transform-define",
+        "./env-config.js"
+      ]
     ]
   },
   "dependencies": {
@@ -46,5 +50,8 @@
     "truffle": "^3.4.9",
     "truffle-contract": "^3.0.0",
     "web3": "^1.0.0-beta.20"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.3"
   }
 }
