--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "node server/",
     "test": "truffle test",
     "build": "next build",
+    "blockchain": "truffle compile && truffle migrate",
     "start": "NODE_ENV=production node server/",
     "heroku-postbuild": "next build"
   },
@@ -45,8 +46,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "truffle": "^3.4.9",
-    "truffle-contract": "^3.0.0",
-    "web3": "^1.0.0-beta.20"
+    "truffle-contract": "^3.0.0"
   },
   "devDependencies": {
     "mocha": "^3.5.3"
